# dj-typed-settings

./: AGENTS.md  CHANGELOG.md  README.md  features.md  justfile  pyproject.toml
.agent/workflows/: get-settings-documentation.md
.github/workflows/: publish.yml
scripts/: generate_schema.py  settings.txt
src/dj_typed_settings/: __init__.py  alias.py  apps.py  conf.py  defaults.py  env.py  env_parser.py  schema.py  validator.py
tests/: conftest.py  test_alias.py  test_alias_types.py  test_defaults.py  test_env.py  test_env_parser.py  test_fix.py  test_fixup.py  test_integration.py  test_schema.py  test_schema_literals.py  test_settings_proxy.py  test_validator.py
tests/env/: test_load_env.py  test_parse_env_file.py
tests/env_parser/: test_parse_cache_url.py  test_parse_database_url.py
tests/validator/: test_cast_to_type.py  test_fix_types.py  test_validate_data_against_schema.py  test_validate_settings.py  test_validate_type.py
